--- a/frontend/templates/themes_admin/add_category.html
+++ b/frontend/templates/themes_admin/add_category.html
@@ -284,7 +284,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-6">
-                            <form action="{% url 'creation_categorie' %}" method="POST" class="needs-validation" novalidate >
+                            <form action="{% url 'creation_categorie' %}" method="post" class="needs-validation" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="col">
                                     <input type="text" class="form-control input" id="nomCat" name="nomCat" required>
