Affichage des catégories et médicaments validé

--- a/frontend/templates/themes_admin/add_medicine.html
+++ b/frontend/templates/themes_admin/add_medicine.html
@@ -27,7 +27,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstr
                         Ajout de Médicament
                     </div>
                     <div class="p-2 bd-highlight">
-                        <a href="{% url 'medicine_list' %}"><button type="button" class="btn btn-list"><i
+                        <a href="{% url 'liste_medicaments' %}"><button type="button" class="btn btn-list"><i
                                     class="fa fa-align-justify"></i> &nbsp;Liste des Médicaments</button></a>
                     </div>
                 </div>
