--- a/frontend/templates/themes_admin/show_batch.html
+++ b/frontend/templates/themes_admin/show_batch.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="p-2 bd-highlight">
                         <a href="{% url 'medicine_grid' %}"><button type="button" class="btn btn-list"><i class="	fa fa-th"></i> &nbsp;Grid View</button></a>
-                        <a href="{% url 'medicine_list' %}"><button type="button" class="btn btn-list"><i class="	fa fa-list-ul"></i> &nbsp;List View</button></a>
+                        <a href="{% url 'liste_medicaments' %}"><button type="button" class="btn btn-list"><i class="	fa fa-list-ul"></i> &nbsp;List View</button></a>
                     </div>
                 </div>
                 <div class="card-body">
