--- a/frontend/templates/themes_admin/add_category.html
+++ b/frontend/templates/themes_admin/add_category.html
@@ -88,9 +88,9 @@
                         <div class="card-body">
                             <ul>
                                 <li><a href="{% url 'add_category' %}">Add Category</a></li>
-                                <li><a href="{% url 'category_list' %}">Category List</a></li>
+                                <li><a href="{% url 'liste_category' %}">Category List</a></li>
                                 <li><a href="{% url 'add_medicine' %}">Add Medicine</a></li>
-                                <li><a href="{% url 'medicine_list' %}">Medicine List</a></li>
+                                <li><a href="{% url 'liste_medicaments' %}">Medicine List</a></li>
 
                             </ul>
                         </div>
@@ -276,7 +276,7 @@
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
                         Ajouter une catégorie
-                        <a href="{% url 'category_list' %}"><button type="button" class="btn btn-list">
+                        <a href="{% url 'liste_category' %}"><button type="button" class="btn btn-list">
                             <i class="fa fa-align-justify"></i>&nbsp; Liste des catégories</button>
                         </a>
                     </div>
@@ -300,8 +300,13 @@
                                         Ce champ est obligatoire.
                                     </div>
                                 </div>
+                                
                                 <button type="submit" class="btn float-right btn-list">Ajouter</button>
+
+                                
                             </form>
+
+                            
 
                         </div>
                         <div class="col-lg-6 d-none d-xl-block d-lg-block">
