--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -43,13 +43,13 @@
         <div class="d-flex align-items-center justify-content-between">
           <div class="logo">
             <div class="site-logo">
-              <a href="{% url 'index' %}" class="js-logo-clone">Pharma</a>
+              <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone">Pharma</a>
             </div>
           </div>
           <div class="main-nav d-none d-lg-block">
             <nav class="site-navigation text-right text-md-center" role="navigation">
               <ul class="site-menu js-clone-nav d-none d-lg-block">
-                <li class="active"><a href="{% url 'index' %}">Home</a></li>
+                <li class="active"><a href="{% url 'liste_medicaments_client' %}">Home</a></li>
                 <li><a href="{% url 'shop' %}">Store</a></li>
                 <li class="has-children">
                   <a href="#">Dropdown</a>
@@ -157,38 +157,19 @@
         <div class="row">
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
             <span class="tag">Sale</span>
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client//product_01.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">Bioderma</a></h3>
-            <p class="price"><del>95.00</del> &mdash; $55.00</p>
+            {% for medicament in medicaments %}
+            <a href="{% url 'shop_single' %}"> 
+              {% if medicament.image and medicament.image.url %}
+                <img src="{{ medicament.image.url }}" class="medicine-img" alt="{{ medicament.nomMedicament}}">
+              {% else %}
+                  Image non disponible
+              {% endif %}
+            <h3 class="text-dark"><a href="{% url 'shop_single' %}">{{ medicament.nomMedicament }}</a></h3>
+            <p class="price"><del>{{ medicament.prixUnitaire }}</del> &mdash; {{ medicament.prixUnitaire }}</p>
+            
           </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client/images/product_02.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">Chanca Piedra</a></h3>
-            <p class="price">$70.00</p>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client/images/product_03.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">Umcka Cold Care</a></h3>
-            <p class="price">$120.00</p>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client/images/product_04.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">Cetyl Pure</a></h3>
-            <p class="price"><del>45.00</del> &mdash; $20.00</p>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client/images/product_05.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">CLA Core</a></h3>
-            <p class="price">$38.00</p>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <span class="tag">Sale</span>
-            <a href="{% url 'shop_single' %}"> <img src="{% static 'themes_client/images/product_06.png' %}" alt="Image"></a>
-            <h3 class="text-dark"><a href="{% url 'shop_single' %}">Poo Pourri</a></h3>
-            <p class="price"><del>$89</del> &mdash; $38.00</p>
-          </div>
+          {% endfor %}
+          
         </div>
         <div class="row mt-5">
           <div class="col-12 text-center">
